I don’t know what to call

--- a/landing/public/manifest.json
+++ b/landing/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "SVALKA",
-  "name": "Create React App Sample",
+  "name": "Get rid of stuff",
   "icons": [
     {
       "src": "favicon.ico",
