--- a/landing/package.json
+++ b/landing/package.json
@@ -38,5 +38,9 @@
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.5",
     "prettier": "1.18.2"
+  },
+  "hooks": {
+    "pre-commit": "npm run lint",
+    "pre-push": "npm test"
   }
 }
