--- a/landing/package.json
+++ b/landing/package.json
@@ -39,8 +39,9 @@
     "husky": "^3.0.5",
     "prettier": "1.18.2"
   },
-  "hooks": {
-    "pre-commit": "npm run lint",
-    "pre-push": "npm test"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
